# wing-rpc

./: .gitignore  Cargo.toml  DEVELOPMENT.md  Justfile  README.md
examples/: colors.wing  empty.wing
examples/chat/: .gitignore  Cargo.toml  Justfile  README.md  chat.wing  pyproject.toml
examples/chat/client/: ipc.py  main.py
examples/chat/src/: ipc.rs  main.rs
examples/wing-files/: colors.wing
pywing-rpc/: data.py  pingpong.py  pingpong.wing  pyproject.toml
pywing-rpc/pywing_rpc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pywing-rpc/wing_rpc/: __init__.py  enums.py  peer.py  protocol.py  sock.py
src/: emitter.rs  idl.pest  main.rs  parser.rs  semantic_analyzer.rs
src/emitter/: python.rs  rust.rs
src/parser/: macros.rs  rules.rs  span.rs
wing-rpc/: Cargo.toml
wing-rpc/examples/: hello.rs
wing-rpc/src/: client.rs  lib.rs  sansio.rs  server.rs
wingc/: Cargo.toml
wingc-cli/: Cargo.toml
wingc-cli/src/: main.rs
wingc/err_examples/: colors_missing.wing  multiple.wing  redundant_enum.wing
wingc/examples/: colors.wing  matrix.wing  person.wing
wingc/src/: idl.pest  lib.rs  main.rs  parser.rs  pest_deserializer.rs  semantic_analyzer.rs  utils.rs
wingc/src/emitter/: python.rs  rust.rs
wingc/src/parser/: items.rs  rules.rs  span.rs
wingc/src/pest_deserializer/: err.rs  impls.rs  simplede.rs
wingc/src/pest_deserializer/impls/: span.rs
wingc/test-files/: composite-simple.py  composite-simple.rs  composite-simple.wing  composite.py  composite.rs  composite.wing  nested.py  nested.rs  nested.wing  simple.py  simple.rs  simple.wing
wingc/tests/: mod.rs
