[package]
name = "wing-rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["from", "into", "deref", "deref_mut"] }
easy-ext = "1.0.2"
macro_rules_attribute = "0.2.0"
miette = {version="7.5.0", features=["fancy"]}
nucleo-matcher = "0.3.1"
pest = { version = "2.8.0", features = ["miette-error", "pretty-print"] }
pest_derive = "2.8.0"
rapidfuzz = "0.5.0"
strum = {version = "0.27.1", features=["derive"]}
thiserror = "2.0.12"
