[package]
name = "wing-rpc"
version = "0.1.0"
edition = "2024"

[features]
default = ["server", "client"]
server = []
client = []

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
easy-ext.workspace = true
strum.workspace = true
thiserror.workspace = true
simple_coro = "0.1.3"
bytemuck = "1.22.0"
pack1 = { version = "1.0.0", features = ["bytemuck"] }
serde_json = "1.0.140"
derive_more = { version = "2.0.1", features = ["from"] }

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
