[package]
name = "wing-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["from", "as_ref", "deref", "deref_mut"] }
macro_rules_attribute = "0.2.0"
miette = {version="7.5.0", features=["fancy"]}
nucleo-matcher = "0.3.1"
pest = { version = "2.8.0", features = ["miette-error", "pretty-print"] }
pest_derive = "2.8.0"
rapidfuzz = "0.5.0"
easy-ext.workspace = true
strum.workspace = true
thiserror.workspace = true
